# bu-hackfest-challenges

amrobot/: Cargo.toml
amrobot/src/: main.rs
amrobot/templates/: challenge.html  index.html
otp/: Cargo.toml  img.b64
otp/src/: main.rs
otp/templates/: main.html  notification.html
phone/: Cargo.toml
phone/src/: index.html  main.rs
