[package]
name = "amrobot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
askama = "0.13.1"
axum = { version = "0.8.3", features = ["form"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
