[package]
name = "otp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
askama = "0.12.1"
axum = { version = "0.8.3", features = ["form", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
totp-rs = { version = "5.7.0", features = ["qr"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs"] }
